styling updates to splash page

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <a href="#projects" class="mx-3 text-2xl">Projects</a>
             <a href="#contact" class="mx-3 text-2xl">Contact</a>
         </header>
-        <div class="flex flex-stretch">
+        <div class="flex flex-stretch justify-center items-center h-5/6">
             <div class="w-2/4">
-                <h2>Hello World!</h2>
-                <h1>I'm Bronwen</h1>
-                <p>I'm a web developer. I code and I craft.</p>
+                <h2 class="text-2xl m-1">Hello World!</h2>
+                <h1 class="text-5xl mx-1 my-3">I'm Bronwen</h1>
+                <p class="text-xl m-1">I am a trainee software developer based in Bristol, UK.</p>
             </div>
             <div>
-                <img class="h-28 w-28" src="images/placeholder.jpg" alt="">
+                <img class="splash-img h-72 w-72 rounded-full p-1" src="images/placeholder.jpg" alt="">
             </div>
         </div>
     </div>
