--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="styles.css" />
     <script defer src="index.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/e06fda92ef.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,700&display=swap" rel="stylesheet" />
 
 </head>
 <body>
@@ -23,14 +25,27 @@
         </header>
         <div class="flex flex-stretch justify-center items-center h-5/6">
             <div class="w-2/4">
-                <h2 class="text-2xl m-1">Hello World!</h2>
-                <h1 class="text-5xl mx-1 my-3">I'm Bronwen</h1>
-                <p class="text-xl m-1">I am a trainee software developer based in Bristol, UK.</p>
+                <h2 class="hi text-8xl m-1">Hi!</h2>
+                <h1 class="text-5xl mx-2 my-3">I'm Bronwen</h1>
+                <p class="text-xl m-3">I am a trainee software developer based in Bristol, UK.</p>
             </div>
             <div>
                 <img class="splash-img h-72 w-72 rounded-full p-1" src="images/placeholder.jpg" alt="">
             </div>
         </div>
+        <div class="flex justify-center"><a href="#about"><i class="fa-solid fa-chevron-down text-5xl"></i></a></div>
+    </div>
+    <div class="about-container h-96 p-3 flex items-center">
+        <div class="w-2/4 flex justify-center">
+            <img class="h-60 w-60" src="images/placeholder.jpg" alt="">
+        </div>
+        <div class="">
+            <h2 class="text-4xl my-5" id="about">About</h2>
+            <p class="text-2xl">This is where i will out an about me blurb. gonna waffle about me, what i've been learning ect ect ect</p>
+        </div>
+    </div>
+    <div class="projects-container">
+
     </div>
 </body>
 </html>
