--- a/index.html
+++ b/index.html
@@ -39,13 +39,27 @@
         <div class="w-2/4 flex justify-center">
             <img class="h-60 w-60" src="images/placeholder.jpg" alt="">
         </div>
-        <div class="">
+        <div>
             <h2 class="text-4xl my-5" id="about">About</h2>
             <p class="text-2xl">This is where i will out an about me blurb. gonna waffle about me, what i've been learning ect ect ect</p>
         </div>
     </div>
-    <div class="projects-container">
-
+    <div class="projects-container w-100 m-3 p-5">
+        <h2 id="projects" class="text-4xl m-2">My projects</h2>
+        <p class="m-2">This is a selection of projects I've worked on so far.</p>
+        
+        <div class="card-container flex flex-wrap justify-center">
+            <div class="card w-1/5 m-4 px-3 pt-3 pb-1 rounded-xl flex flex-col items-center text-center">
+                <h2 class="text-2xl my-5">Project Name</h2>
+                <img src="images/placeholder.jpg" alt="" class="w-11/12 h-2/4">
+                <p class="text-xl mt-5 mb-14">This will be a quick breakdown of the project.</p>
+                <div class="w-10/12 flex justify-between text-xl">
+                    <button class="p-2 rounded-xl">More Info</button>
+                    <a class="p-2 rounded-xl" href="">Github<i class="fa-brands fa-github"></i></a>
+                </div>
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
