--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <div class="card-container flex flex-wrap justify-center">
             <div class="card w-1/5 m-4 px-3 pt-3 pb-1 rounded-xl flex flex-col items-center text-center">
                 <h2 class="text-2xl my-5">Project Name</h2>
-                <img src="images/placeholder.jpg" alt="" class="w-11/12 h-2/4">
+                <img src="images/hogwarts.png" alt="" class="w-11/12 h-2/4">
                 <p class="text-xl mt-5 mb-14">This will be a quick breakdown of the project.</p>
                 <div class="w-10/12 flex justify-between text-xl">
                     <button class="p-2 rounded-xl">More Info</button>
                     <a class="p-2 rounded-xl" href="">Github<i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
-            
+
         </div>
     </div>
 </body>
