project section functioning and contact started

--- a/index.html
+++ b/index.html
@@ -48,17 +48,15 @@
         <h2 id="projects" class="text-4xl m-2">My projects</h2>
         <p class="m-2">This is a selection of projects I've worked on so far.</p>
         
-        <div class="card-container flex flex-wrap justify-center">
-            <div class="card w-1/5 m-4 px-3 pt-3 pb-1 rounded-xl flex flex-col items-center text-center">
-                <h2 class="text-2xl my-5">Project Name</h2>
-                <img src="images/hogwarts.png" alt="" class="w-11/12 h-2/4">
-                <p class="text-xl mt-5 mb-14">This will be a quick breakdown of the project.</p>
-                <div class="w-10/12 flex justify-between text-xl">
-                    <button class="p-2 rounded-xl">More Info</button>
-                    <a class="p-2 rounded-xl" href="">Github<i class="fa-brands fa-github"></i></a>
-                </div>
-            </div>
-
+        <div class="card-container flex flex-wrap justify-center"> </div>
+    </div>
+    <div class="contact-container">
+        <h2>Contact</h2>
+        <p>The best way to contact me is via Email, but if social media is preferred I have provided these as well</p>
+        <div class="flex">
+            <a href="mailto:bronwen@luxi.dev"><i class="fa-solid fa-envelope"></i></a>
+            <a href="linkedin.com/in/bronwen-nielson-7ba9b7182"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/BronwenNielson"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
 </body>
