--- a/index.html
+++ b/index.html
@@ -39,30 +39,31 @@
     </div>
     <div id="about" class="about-container h-96 p-3 flex items-center">
         <div class="w-2/4 flex justify-center">
-            <img class="h-60 w-60" src="images/placeholder.jpg" alt="">
+            <img class="rounded-xl w-60" src="images/profile.jpeg" alt="">
         </div>
-        <div>
+        <div class="w-2/4 p-3">
             <h2 class="text-4xl my-5">About</h2>
-            <p class="text-2xl">This is where i will out an about me blurb. gonna waffle about me, what i've been learning ect ect ect</p>
+            <p class="text-xl my-3">Hi, I'm Bron. I'm still relatively new to my coding journey, having started learning in late 2022. Alongside self learning, I have also completed the ClickStart Digital Skills course, and am currently engaging in iO Academy's Software Development Essentials bootcamp.</p>
+            <p class="text-xl my-4">When i'm not buried in the code you can usually find me curled up on the sofa, working on my latest crafting project, absorbed in good story, or catching up on work for the non-profit site Givin Gifts. </p>
         </div>
     </div>
     <div id="projects" class="projects-container w-full m-3 p-5">
-        <h2 class="text-4xl m-2">My projects</h2>
-        <p class="m-2">This is a selection of projects I've worked on so far.</p>
+        <h2 class="text-4xl mx-12 my-5 pt-5">My projects</h2>
+        <p class="mt-2 mb-12 m-12">This is a selection of projects I've worked on so far.</p>
         
         <div class="card-container flex flex-wrap justify-center w-full"> </div>
     </div>
     <div id="contact" class="contact-container">
-        <h2>Contact</h2>
-        <p>The best way to contact me is via Email, but if social media is preferred I have provided these as well</p>
-        <div class="flex">
-            <a href="mailto:bronwen@luxi.dev"><i class="fa-solid fa-envelope"></i></a>
-            <a href="linkedin.com/in/bronwen-nielson-7ba9b7182"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/BronwenNielson"><i class="fa-brands fa-github"></i></a>
+        <h2 class="text-4xl mx-12 my-5 pt-5">Contact</h2>
+        <p class="text-xl mx-12">The best way to contact me is via Email, but if social media is preferred I have provided these as well</p>
+        <div class="flex text-6xl mx-12 my-3">
+            <a href="mailto:bronwen@luxi.dev"><i class="fa-solid fa-envelope m-5"></i></a>
+            <a href="linkedin.com/in/bronwen-nielson-7ba9b7182"><i class="fa-brands fa-linkedin m-5"></i></a>
+            <a href="https://github.com/BronwenNielson"><i class="fa-brands fa-github m-5"></i></a>
         </div>
     </div>
     <footer>
-        <p>&copy; Copyright 2024</p>
+        <p class="mx-12 my-2">&copy; Copyright 2024</p>
     </footer>
 
     <div class="modal"> </div>
