Styling and accessability changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- Splash -->
         <div class="flex flex-col md:flex-row-reverse justify-center items-center h-5/6">
             <div>
-                <img class="h-60 w-60 mb-12 mt-24 md:mb-0 md:mt-0 md:h-72 md:w-72 rounded-full p-1" src="images/placeholder.jpg" alt="">
+                <img class="h-60 w-60 mb-12 mt-24 md:mb-0 md:mt-0 md:h-72 md:w-72 rounded-full p-1" src="images/cartoon.jpeg" alt="a cartoon image of Bronwen">
             </div>
             <div class="w-3/4 md:w-2/4">
                 <h2 class="hi text-8xl m-1">Hi!</h2>
@@ -53,7 +53,7 @@
 <!-- About -->
     <div id="about" class="about-container md:h-96 p-3 flex items-center">
         <div class="w-0 md:w-2/4 flex justify-center items-center">
-            <img class="hidden md:block rounded-xl w-60" src="images/profile.jpeg" alt="">
+            <img class="hidden md:block rounded-xl w-60" src="images/profile.jpeg" alt="Bronwen">
         </div>
         <div class="md:w-2/4 p-3 text-center">
             <h2 class="text-4xl my-5">About</h2>
